Resolve issue of form fields zooming on IOS

--- a/styles/main.css
+++ b/styles/main.css
@@ -704,13 +704,6 @@ img[alt="bw main logo"] {
     max-width: 20%;
 }
 
-
-/* img[alt="diamond"] {
-    margin: 4rem auto 0 auto;
-    width: 3rem;
-} */
-
-
 img[alt="flare left"], [alt="flare right"] {
     display: none;
 }
@@ -1135,7 +1128,7 @@ blockquote h4 {
 
 .form-row input, textarea {
     border-radius: 4px;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     outline: none;
     padding: 1rem;
 }
